# Novarite

./: .env.example  .gitignore  Anchor.toml  LICENSE  README.md  package.json
docs/: mvp_scope.md  platform-message-schemas.md  project_overview.md  public_messaging.md  technical_architecture.md
frontend/: .env.example  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/api/auth/send-email-code/: route.ts
frontend/app/api/auth/send-phone-code/: route.ts
frontend/app/api/auth/verify-email-code/: route.ts
frontend/app/api/auth/verify-phone-code/: route.ts
frontend/app/api/games/publish/: route.ts
frontend/app/api/games/published/: route.ts
frontend/app/login/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/register/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: AuthProvider.tsx  CreatorDashboardPreview.tsx  FeatureGrid.tsx  Footer.tsx  Header.tsx  Hero.tsx  MarketplacePreview.tsx  WalletProvider.tsx
frontend/context/: ProfileContext.tsx
frontend/lib/: email.ts  games.ts  mockGames.ts  novariteClient.ts  purchases.ts  seedGames.ts  siteLinks.ts  sms.ts  solana.ts  verificationStore.ts
frontend/lib/supabase/: admin.ts  client.ts
programs/novarite/: Cargo.toml
programs/novarite/src/: lib.rs
scripts/: README.md  init-platform.ts
supabase/migrations/: 001_games_purchases_constraints.sql  002_profiles.sql  003_core_platform_additions.sql
tests/: novarite.ts
(+2 files in other folders)
